--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 buildscript {
-    ext.kotlinVersion = '1.3.72'
+    ext.kotlinVersion = '1.4.0'
 
     repositories {
         maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
-        maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url 'https://maven.aliyun.com/repository/central' }
     }
 
     dependencies {
@@ -24,13 +24,13 @@ application {
 
 repositories {
     maven { url 'https://maven.aliyun.com/repository/jcenter' }
-    maven { url 'https://maven.aliyun.com/repository/public' }
+    maven { url 'https://maven.aliyun.com/repository/central' }
 }
 
 dependencies {
     implementation group: 'org.glavo', name: 'rcon-java', version: '2.0.1'
     implementation group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jdk8', version: kotlinVersion
-    implementation group: 'net.mamoe', name: 'mirai-core-qqandroid', version: '1.1.3'
+    implementation group: 'net.mamoe', name: 'mirai-core-qqandroid', version: '1.2.1'
 }
 
 compileJava {
